:twisted_rightwards_arrows: More edits (#11)
* Better punctuation

* Избегаем проблем со склонением имён

* Сокращаем текст. Fixes #7

* Link to Hatfield-McCoy feud

* Improve readability and "flow"

* Drop italics to enlarge the space after word

* Further readability improvements

--- a/words.html
+++ b/words.html
@@ -169,8 +169,8 @@ Thanks again!
 </p>
 
 <p id="oneoff_1_top">
-Если ты доверишься и он обманет, то ты потеряешь монету, а он получит 3. (счёт: -1 : +3)
-Однако, если вы оба сжульничаете, то никто ничего не получит и не потеряет. (0 : 0)
+Если ты доверишься и он обманет, то ты потеряешь монету, а он получит 3 (счёт: -1 : +3).
+Однако, если вы оба сжульничаете, то никто ничего не получит и не потеряет (0 : 0).
 <b>Как следствие, ты должен СЖУЛЬНИЧАТЬ.</b>
 </p>
 
@@ -188,8 +188,8 @@ Thanks again!
 </p>
 
 <p id="oneoff_2_top">
-Потому что если вы оба доверяетесь, то вы оба жертвуете одной монетой, чтобы получить три. (+2 : +2)
-Но если ты обманываешь, а он верит, то ты получаешь 3 монеты, а он теряет одну. (+3 : -1)
+Потому что если вы оба доверяетесь, то вы оба жертвуете одной монетой, чтобы получить три (+2 : +2).
+Но если ты обманываешь, а он верит, то ты получаешь 3 монеты, а он теряет одну (+3 : -1).<br/>
 <b>Потому: ты всё равно "обязан" СЖУЛЬНИЧАТЬ.</b>
 </p>
 
@@ -321,7 +321,7 @@ Thanks again!
 </p>
 
 <p id="match_header_1">
-<b>Матч #[N]:</b> [A] против [B]
+<b>Матч #[N]:</b> [A] vs [B]
 </p>
 <p id="match_header_2">
 <b>Раунды:</b>
@@ -350,7 +350,7 @@ Thanks again!
 </p>
 <p id="tournament_6">
 Они назвали это <b>системой "живи и дай жить другим".</b>
-Проще говоря, ты не стреляешь в меня, я не стреляю в тебя. И это работало, во многих местах!
+Проще говоря, ты не стреляешь в меня, я не стреляю в тебя. И это работало, причём во многих местах!
 </p>
 <p id="tournament_7">
 Ты всё ещё можешь быть скептичен. Большинство солдат не склонны спонтанно мириться с врагом.
@@ -358,7 +358,7 @@ Thanks again!
 </p>
 <p id="tournament_8">
 В окопах уникально вот что:
-в отличии от почти любой другой формы войны,
+в отличие от почти любой другой формы войны,
 тебе приходится видеть <i>одних и тех же солдат</i> каждый день.
 </p>
 <p id="tournament_9">
@@ -379,17 +379,17 @@ Thanks again!
 Поздравляю, ты поставил на правильную лошадку.
 </p>
 <p id="tournament_winner_2_nay">
-(Извиняюсь за твою ставку, [CHAR].)
+(Увы, не [CHAR], на которого ты поставил.)
 </p>
 <p id="tournament_winner_3">
 У <span class="tft">Имитатора</span> много имён.
 Золотое правило, взаимный альтруизм, око за око, или... <b>живи и дай жить другим.</b>
 Вот почему в окопах Первой мировой войны смог образоваться "мир":
-когда ты вынужден играть в одну и ту же игру с
-одними и теми же <i>конкретными людьми</i> (не просто одним и тем же абстрактным "врагом"), снова и снова &mdash;
+когда ты вынужден снова и снова играть в одну и ту же игру с
+одними и теми же <i>конкретными людьми</i> (не просто одним и тем же абстрактным "врагом") &mdash;
 <span class="tft">Имитатор</span> выигрывает не только битву, но и войну.
 <br><br>
-Но если дело так сильно меняется, если играть в игру несколько раз, что если сыграть...
+Но раз дело так сильно меняется, когда игра повторяется несколько раз, что если сыграть...
 </p>
 <p id="tournament_teaser">
 ...несколько <i>турниров?</i> &rarr;
@@ -432,7 +432,7 @@ Thanks again!
 <span class="tft">5 Имитаторов</span>.
 (<span class="grudge">Злопамятных</span> и <span class="prober">Детективов</span> в расчёт пока что не принимаем)
 <br><br>
-Выполним процесс турнир-устранение-копирование дюжину раз.
+Выполним процесс "турнир-устранение-копирование" дюжину раз.
 Пора сделать ещё ставку! Кто, по-твоему, выиграет <i>первый</i> турнир?
 <b>ДЕЛАЙ СТАВКУ, СНОВА:</b>
 </p>
@@ -526,7 +526,7 @@ Thanks again!
 <p id="evo_9_end">
 Это напоминает мне цитату:
 <br><br>
-<i>"Люди наказываются не за грехи, а самими грехами."</i><br>
+<i>Люди наказываются не за грехи, а самими грехами.</i><br>
 ~ Элберт Хаббард
 </p>
 <p id="evo_9_btn">
@@ -534,7 +534,7 @@ Thanks again!
 </p>
 
 <p id="evo_10">
-(...результат сохраняется даже если добавить обратно
+(...результат сохраняется, даже если добавить обратно
 <span class="grudge">Злопамятных</span> и <span class="prober">Детективов</span>.)
 </p>
 
@@ -550,7 +550,7 @@ Thanks again!
 потому что когда все кроме <span class="grudge">Злопамятных</span> и <span class="tft">Имитаторов</span> 
 устранены, возникает ничья.)
 <br><br>
-Кажется, математика теории игр пытается нам что-то сказать:
+Кажется, математика теории намекает нам, что
 философия <span class="tft">Имитаторов</span>,
 "поступай с другими так, как ты хотел бы, чтобы другие поступали с тобой", может быть не только
 <i>моральной</i>, но и <i>математической</i> истиной.
@@ -568,7 +568,7 @@ Thanks again!
 почему тогда вокруг так много недоверчивых, ненадёжных людей?
 Что привело к этой эпидемии недоверия?
 <br><br>
-Ключ в самой формулировке. "В <i>этой</i> повторяющейся игре на доверие."
+Ключ в самой формулировке. "В <i>этой</i> повторяющейся игре на доверие".
 Пока что мы говорили только об изменениях в игроках:
 как насчёт <i>изменений в игре?</i>
 <i>Что</i> могло бы привести к...
@@ -611,7 +611,7 @@ Thanks again!
 <br><br>
 В 1985 году опросы американцев показали, что в среднем у них по три близких
 друга. В 2004-м году это число упало до <i>нуля</i>.
-У нас теперь меньше друзей по классовым, расовым, экономическим и политическим направлениям, потому что у нас меньше друзей <i>в целом</i>.
+У нас теперь меньше друзей с другими взглядами, социальным положением и политическими убеждениями, потому что у нас меньше друзей <i>в целом</i>.
 И, как ты только что сам выяснил,
 <b>чем меньше "повторных взаимодействий", тем больше будет распространяться недоверие.</b>
 <br><br>
@@ -645,9 +645,9 @@ Thanks again!
 с низкой "беспроигрышной" наградой, <span class="all_d">Обманщики</span> берут верх.
 В теории игр на этот счёт есть две сильные идеи:
 <br><br>
-<b>"Игра с нулевой суммой".</b> Это распространённое (увы) убеждение в том, что выигрыш для "нас" <i>должен</i> означать проигрыш для "них", и наоборот.
+<b>"Игра с нулевой суммой".</b> Это распространённая (увы) вера в том, что выигрыш для "нас" <i>должен</i> означать проигрыш для "них", и наоборот.
 <br><br>
-<b>"Игра с ненулевой суммой".</b> Это когда люди прилагают все усилия для создания взаимовыгодного исхода! (или, по крайней мере, избегают потерь). Без игры с ненулевой суммой <i>доверие развиваться не может.</i>
+<b>"Игра с ненулевой суммой".</b> Это когда люди прилагают все усилия для создания взаимовыгодного исхода (или, по крайней мере, избежания потерь). Без игры с ненулевой суммой <i>доверие развиваться не может.</i>
 <br><br>
 Кстати,
 давай посмотрим на наш третий и последний барьер на пути развития доверия...
@@ -672,13 +672,13 @@ Thanks again!
 И, как правило, они просто отплатят друг другу добротой и будут жить припеваючи.
 </p>
 <p id="noise_2_end">
-Но что, если, пытаясь ответить взаимностью...
+Но что, если пытаясь ответить взаимностью...
 </p>
 
 <p id="noise_3">
 <b>О НЕТ</b>
 <br>
-Ошибки, недопонимание, неправильное толкование &mdash; в жизни несчастные случаи происходят на каждом шагу.
+Ошибки, недопонимание, неправильное толкование &mdash; в жизни такое происходит на каждом шагу.
 </p>
 <p id="noise_3_end">
 Но если другой игрок <i>не считает</i> это случайностью...
@@ -694,7 +694,7 @@ Thanks again!
 </p>
 
 <p id="noise_5">
-Таким образом, подобно Хаттфилдам и Маккоям, <!-- TODO: найти аналогичную историю, знакомую русскоязычному читателю. Монтекки и Капулетти это немного не то. -->
+Таким образом, подобно <a href="https://ru.wikipedia.org/wiki/Вражда_Хаттфилдов_и_Маккоев">Хаттфилдам и Маккоям</a>,
 эти два <span class="tft">Имитатора</span> будут крутиться в бесконечном цикле мести...
 Который начался с одной ошибки, давным-давно.
 </p>
@@ -725,7 +725,7 @@ Thanks again!
 
 <p id="character_random">
 <b>СЛУЧАЙНЫЙ:</b><br>
-<i>Обезьяний робот! Ниндзя тако пицца! лол я такой непредсказуемый</i><br>
+<i>Обезьяний робот! Ниндзя тако пицца! Лол я такой непредсказуемый</i><br>
 (Просто жульничает или сотрудничает случайным образом с вероятностью 50/50)
 </p>
 
@@ -792,10 +792,10 @@ Thanks again!
 Удивительно, что с ещё более <i>злобной</i> начальной популяцией,
 <span class="tf2t">Подражатель</span>,
 <i>более снисходительная</i> версия <span class="tft">Имитатора</span>,
-оказался наиболее успешным! (примечание: <span class="tf2t">Подражатель</span> настолько снисходителен,
-что даже <i>не полностью</i> уничтожает <span class="tft">Имитатора</span>. Они уживаются вместе)
+оказался наиболее успешным! (Заметь: <span class="tf2t">Подражатель</span> настолько добр,
+что <i>не полностью</i> уничтожает <span class="tft">Имитатора</span>. Они уживаются.)
 <br><br>
-В данном случае небольшое "недопонимание" (вероятность ошибки в каждом раунде &mdash; 5%) может привести
+В данном случае небольшое "недопонимание" (вероятность ошибки 5%) может привести
 к <i>большей</i> степени снисходительности. Но будет ли это справедливо для <i>всех</i> уровней...
 </p>
 <p id="noise_evo_4_2_btn">
@@ -820,10 +820,9 @@ Thanks again!
 <br><br>
 Вот почему "недопонимание" образует такую интересную преграду доверию:
 когда его <i>немного</i>, оно приводит к снисходительности,
-но его <i>избыток</i> способствует широко распространённому недоверию!
-Я думаю, наши современные медиа-технологии
-хоть и помогли развить связь...
-но гораздо больше увеличили степень нашего <i>недопонимания</i>.
+но его <i>избыток</i> ведёт к распространению недоверия!
+Я думаю, современные медиа-технологии хоть и помогли развить связь...
+но гораздо сильней увеличили степень нашего <i>недопонимания</i>.
 <br><br>
 Наконец, давай поэкспериментируем со <i>всеми</i> числами, ручками и ползунками.
 Поиграем...
@@ -920,7 +919,7 @@ one for the plural version, one for the singular version.
 </p>
 
 <p id="outro_1">
-Если и есть в теории игр какая-то <i>основная</i> идея,<br>
+Если и есть в теории игр какая-то основная идея,<br>
 то вот она:
 <br><br>
 <b>Игра определяет то, что игроки в ней делают.</b><br>
@@ -930,7 +929,7 @@ one for the plural version, one for the singular version.
 <br><br>
 Это может показаться циничным или наивным &mdash; что мы "всего лишь" продукты своей
 среды &mdash; но, как напоминает нам теория игр, для друг друга мы <i>и есть</i> среда.
-<b>В краткосрочной перспективе игра определяет игроков. Но в итоге
+<b>В краткосрочной перспективе игра определяет игроков. В долгосрочной же
 именно мы, игроки, определяем игру.</b>
 <br><br>
 Итак, делай всё, что можешь, и создавай условия для развития доверия. Строй отношения. Ищи взаимовыгодные решения. Общайся понятно.
@@ -1087,7 +1086,7 @@ p.s: хочешь больше игрового обучения?<br>
 </p>
 
 <p id="forgot_whos_who">
-(забыл, кто есть кто? наведи курсор на кнопки, чтобы увидеть описания каждого персонажа!)
+(Забыл, кто есть кто? Наведи курсор на кнопки, чтобы увидеть описания каждого персонажа!)
 </p>
 <p id="who_tft">
 Начинает с доверия. Затем просто повторяет все, что ТЫ делал в последнем раунде.
